<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/llama"
    android:padding="0dp"
    tools:context=".advice.AdviceActivity">


    <TextView
        android:id="@+id/newTheoryTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorButton"
        android:text="@string/newTheory_bar_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextButtonWhite"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <include
        layout="@layout/banana_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="85sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="80sp"
            android:background="@drawable/round_corners"
            android:visibility="visible">

            <EditText
                android:id="@+id/userEditText"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:autofillHints="string/user_edit_text"
                android:ems="10"
                android:hint="@string/user_edit_text"
                android:textAlignment="center"
                android:inputType="textPersonName"
                android:textColor="@color/colorTextButtonBlack"
                android:textColorHint="@color/colorTextButtonGreyOpacity"
                android:textSize="24sp"
                android:visibility="visible" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200sp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="80sp"
            android:background="@drawable/round_corners"
            android:visibility="visible">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:autofillHints="@string/name_text_view"
                android:textAlignment="center"
                android:ems="10"
                android:hint="@string/name_text_view"
                android:inputType="textPersonName"
                android:textColor="@color/colorTextButtonBlack"
                android:textColorHint="@color/colorTextButtonGreyOpacity"
                android:textSize="24sp"
                android:visibility="visible" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350sp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="100sp"
            android:background="@drawable/round_corners"
            android:visibility="visible">

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/description_text_view"
                android:ems="10"
                android:hint="@string/description_text_view"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:textColor="@color/colorTextButtonBlack"
                android:textColorHint="@color/colorTextButtonGreyOpacity"
                android:textSize="24sp"
                android:visibility="visible" />
        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="650dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_toStartOf="@+id/sendButton"
            android:background="@color/colorButton"
            android:text="@string/cancel_button_label" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/send_button_label" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>