...
    <include
        layout="@layout/banana_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="135dp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/very_round_corners"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addButton"
            android:layout_width="59dp"
            android:layout_height="53dp"
            android:layout_marginStart="35sp"
            android:layout_marginTop="7sp"
            android:background="@drawable/addcross" />
    </RelativeLayout>
...
