...
    <string name="place_text_label">LUGARES</string>
    <string name="theory_text_label">TEORÍAS</string>
    <string name="advice_text_label">CONSEJOS</string>
    <string name="challenge_text_label">DESAFÍOS</string>
    <string name="shop_text_label">TIENDA</string>
    <string name="support_text_label">APOYO</string>
    <string name="button_continue_label">CONTINUAR</string>
    <string name="menu_label">MENÚ</string>
    <string name="search_button_label">BUSCAR</string>
    <string name="banana_button_label" />
    <string name="weapon_bar_label">ARMAS</string>
    <string name="advice_bar_label">CONSEJOS</string>
    <string name="support_bar_label">APOYO</string>
...
    <string name="newTheory_bar_label">NUEVA TEORÍA</string>
    <string name="user_text_label">Usuario</string>
    <string name="user_edit_text">Nombre del usuario</string>
    <string name="name_text_view">Nombre de la teoría</string>
    <string name="description_text_view">Descripción de la teoría</string>
    <string name="cancel_button_label">Cancelar</string>
    <string name="send_button_label">ENVIAR</string>
    <string name="challenge_label_text">Challenge Content</string>
    <string name="challenge_bar_text_label">DESAFIOS</string>
    <string name="title_advice_label">Titulo</string>
    <string name="content_advice_label">Hola buenas tardes que tal estas espero que esten bien porque esto es un texto de prueba fleje largo en verdad</string>
    <string name="challenge_detail_label">Desafios-Semana</string>
    <string name="challenge_detail_title_label">Challenge Detail Title</string>
...
