...
            android:layout_marginBottom="20dp"
            android:layout_weight="2"
            android:contentDescription="@string/content_description_instagram"
            android:src="@drawable/instagram" />

        <ImageView
            android:id="@+id/twitterButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="2"
            android:contentDescription="@string/content_description_twitter"
            android:src="@drawable/twitter" />

        <ImageView
            android:id="@+id/twitchButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
...
