<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/introduction"
    android:padding="16dp"
    tools:context=".test_espresso.IntroductionActivity">

    <ImageView
        android:id="@+id/starImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/buttonContinue"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:srcCompat="@drawable/star" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150sp"
        android:background="@color/colorButton"
        android:text="@string/button_continue_label"
        android:textAlignment="center"
        android:textColor="@color/colorTextButtonBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>